[package]
name = "tokio-mqttc"
version = "0.0.2"
authors = ["Adam Jacobus <adam.m.jacobus@gmail.com>",
	   "Bernhard Schuster <bernhard@ahoi.io>"]

[dependencies]
futures = "0.1.14"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-tls = "0.1"
bitflags = "0.8"
error-chain = "0.11"
nom = "2.1"
enum_primitive = "0.1"
bytes = "0.4"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9"
touch = "0"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
take = "0.1.0"
regex = "0.2"
lazy_static = "0.2"
futures-mutex = "0.1.2"

[dev-dependencies]
nom-test-helpers = "2.0.0"
